[package]
name = "bloom-rpc"
version = "0.1.0"
authors = ["Buffalo Lv"]
edition = "2018"


[[bin]]
path = "rpc-server/src/main.rs"
name = "bloom-rpc"

[workspace]
members = [
    "eth-rpc",
    "rpc-client",
    "rpc-server",
]

[dependencies]
jsonrpc-http-server = "14.1"
jsonrpc-derive = "14.1"
jsonrpc-core = "14.1"
ethereum-types = "0.9.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-hex = "2.1.0"
ansi_term = "0.11"

web3 = { git = "https://github.com/tomusdrw/rust-web3" }
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.7.0"

[dev-dependencies]
env_logger = "0.7"

